Improve styling of results span.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<label>Num 1:</label><input class="choice-one"><br><br>
 				<label>Math Operator:</label><input class="operator"><br><br>
 				<label>Num 2:</label><input class="choice-two"><br><br>
-				<label>Result:</label><span class="choice-sum"></span>
+				<label id="lab">Result:</label><span class="choice-sum"></span>
 			</div>
 			
 		</div>
